# spend-wise

./: .gitignore  auth_token.py  auth_utils.py  database.py  dependencies.py  fastapi-practice.db  main.py  pyproject.toml  requirements.txt
db/: db_expense.py  db_income.py  db_user.py
models/: expense.py  income.py  user.py
router/: auth.py  expense.py  income.py
schema/: expense.py  income.py  user.py
